--- a/apps/1.4301_HeatEquationKernelWithMaterial.yaml
+++ b/apps/1.4301_HeatEquationKernelWithMaterial.yaml
@@ -52,7 +52,7 @@ properties:
   ##################################################
 
   heat_capacity:  # FILE_IMPORT
-    file_path: ./SS304L_HeatEquationKernelWithMaterial.xlsx
+    file_path: ./1.4301_HeatEquationKernelWithMaterial.xlsx
     temperature_column: T (K)
     property_column: Specific heat (J/(Kg K))
     bounds: [extrapolate, extrapolate]
@@ -64,7 +64,7 @@ properties:
   ##################################################
 
   heat_conductivity:  # FILE_IMPORT
-    file_path: ./SS304L_HeatEquationKernelWithMaterial.xlsx
+    file_path: ./1.4301_HeatEquationKernelWithMaterial.xlsx
     temperature_column: T (K)
     property_column: Thermal conductivity (W/(m*K))-TOTAL-10000.0(K/s)
     bounds: [extrapolate, extrapolate]
@@ -76,7 +76,7 @@ properties:
   ##################################################
 
   density:  # FILE_IMPORT
-    file_path: ./SS304L_HeatEquationKernelWithMaterial.xlsx
+    file_path: ./1.4301_HeatEquationKernelWithMaterial.xlsx
     temperature_column: T (K)
     property_column: Density (kg/(m)^3)
     bounds: [extrapolate, extrapolate]
