--- a/src/pymatlib/data/materials/pure_metals/Al/Al.yaml
+++ b/src/pymatlib/data/materials/pure_metals/Al/Al.yaml
@@ -4,6 +4,11 @@
 # This file defines material properties for pure Aluminum using the pymatlib format.
 # Pymatlib supports 6 property types: CONSTANT_VALUE, STEP_FUNCTION, FILE_IMPORT, TABULAR_DATA, PIECEWISE_EQUATION, and COMPUTED_PROPERTY
 # Pure metals require 'melting_temperature' and 'boiling_temperature' instead of solidus/liquidus
+#
+# IMPORTANT: All property configurations must include 'bounds' parameter (except CONSTANT properties)
+#
+# Note: T is just a placeholder in equations.
+# The final equation will depend on the symbol passed via the API.
 # ====================================================================================================
 
 name: Aluminum
