--- a/src/pymatlib/data/materials/alloys/1.4301/1.4301.yaml
+++ b/src/pymatlib/data/materials/alloys/1.4301/1.4301.yaml
@@ -1,13 +1,16 @@
 # ====================================================================================================
 # PYMATLIB MATERIAL CONFIGURATION FILE
 # ====================================================================================================
-# This file defines material properties for Stainless Steel 304L using the new pymatlib format.
+# This file defines material properties for 1.4301 (Steel) using the new pymatlib format.
 # Pymatlib supports 6 property types: CONSTANT_VALUE, STEP_FUNCTION, FILE_IMPORT, TABULAR_DATA, PIECEWISE_EQUATION, and COMPUTED_PROPERTY
 #
 # IMPORTANT: All property configurations must include 'bounds' parameter (except CONSTANT properties)
+#
+# Note: T is just a placeholder in equations.
+# The final equation will depend on the symbol passed via the API.
 # ====================================================================================================
 
-name: Stainless Steel 304L
+name: "1.4301"
 material_type: alloy  # Must be 'alloy' or 'pure_metal'
 
 # Composition fractions must sum to 1.0
@@ -73,7 +76,7 @@ properties:
   # ====================================================================================================
 
   heat_capacity:
-    file_path: ./SS304L.xlsx               # Relative path from YAML file location
+    file_path: ./1.4301.xlsx               # Relative path from YAML file location
     temperature_column: T (K)              # Column name for temperature data
     property_column: Specific heat (J/(Kg K)) # Column name for property data
     bounds: [constant, constant]           # Required boundary behavior
@@ -83,7 +86,7 @@ properties:
       segments: 4                          # Divide into 4 piecewise segments
 
   density:
-    file_path: ./SS304L.xlsx
+    file_path: ./1.4301.xlsx
     temperature_column: T (K)
     property_column: Density (kg/(m)^3)
     bounds: [constant, constant]
