--- a/src/pymatlib/data/materials/alloys/SS304L/SS304L.yaml
+++ b/src/pymatlib/data/materials/alloys/SS304L/SS304L.yaml
@@ -32,7 +32,7 @@ properties:
   # Note: Must be float, not integer (use 1.0 instead of 1)
   # ====================================================================================================
 
-  density: 6950.0  # J/kg - Scientific notation supported
+  # density: 6950.0  # J/kg - Scientific notation supported
 
   # ====================================================================================================
   # PROPERTY TYPE 2: STEP_FUNCTION
@@ -57,10 +57,10 @@ properties:
   # Supports temperature references, explicit lists, and tuple notation
   # ====================================================================================================
 
-  #density:
-    #temperature: [300, 400, 500, 600, 700, 800, 900, 1000, 1100, 1500, 2000, 2500, 3000]
-    #value: [7747, 7716, 7685, 7652, 7617, 7582, 7545, 7508, 7469, 7305, 6825, 6388, 5925]
-    #bounds: [constant, constant]
+  heat_conductivity:
+    temperature: [500, 1000, 1600, 1700, 1750, 2000, 2500]
+    value: [19.25, 25.47, 32.94, 33.52, 31.53, 35.33, 42.95]
+    bounds: [extrapolate, extrapolate]
 
 
 
@@ -73,21 +73,21 @@ properties:
 
 
 
-  #density:
-    #file_path: ./SS304L.xlsx
-    #temperature_header: T (K)
-    #value_header: Density (kg/(m)^3)
-    #bounds: [constant, extrapolate]
+  density:
+    file_path: ./SS304L.xlsx
+    temperature_header: T (K)
+    value_header: Density (kg/(m)^3)
+    bounds: [extrapolate, extrapolate]
     #regression:
       #simplify: post  # Simplify after symbolic processing
       #degree: 1       # Linear regression
       #segments: 1     # Use 5 segments for piecewise regression
 
-  #heat_capacity:
-    #file_path: ./SS304L.xlsx               # Relative path from YAML file location
-    #temperature_header: T (K)              # Column name for temperature data
-    #value_header: Specific heat (J/(Kg K)) # Column name for property data
-    #bounds: [constant, constant]
+  heat_capacity:
+    file_path: ./SS304L.xlsx               # Relative path from YAML file location
+    temperature_header: T (K)              # Column name for temperature data
+    value_header: Specific heat (J/(Kg K)) # Column name for property data
+    bounds: [extrapolate, extrapolate]
 
     # ====================================================================================================
   # PROPERTY TYPE 5: PIECEWISE_EQUATION
@@ -111,6 +111,10 @@ properties:
 
 
 
+  thermal_diffusivity:
+    temperature: (3000, 300, -5.0)         # (start, stop, negative_step) - decreasing temperature
+    equation: heat_conductivity /(density * heat_capacity)  # Multi-property dependency
+    bounds: [constant, constant]
 
 
   #density:
