--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,7 +119,7 @@ materforge = [
 write_to = "src/materforge/_version.py"
 version_scheme = "python-simplified-semver"
 local_scheme = "node-and-date"
-fallback_version = "0.4.1"
+fallback_version = "0.5.0"  # Updated to match current version
 
 [tool.pytest.ini_options]
 addopts = [
