--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,6 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
-    # "pytest-cov>=4.0.0",
     "pytest-xdist>=3.0.0",
     "pytest-mock>=3.10.0",
     "hypothesis>=6.0.0",
@@ -59,12 +58,10 @@ dev = [
 ]
 test = [
     "pytest>=7.0.0",
-    # "pytest-cov>=4.0.0",
     "pytest-xdist>=3.0.0",
     "pytest-mock>=3.10.0",
     "hypothesis>=6.0.0",
     "pytest-benchmark>=4.0.0",
-    # "pytest-timeout>=2.1.0",
 ]
 docs = [
     "sphinx>=6.0.0",
@@ -86,11 +83,12 @@ all = [
 ]
 
 [project.urls]
-Homepage = "https://i10git.cs.fau.de/rahil.doshi/materforge"
-Repository = "https://i10git.cs.fau.de/rahil.doshi/materforge"
-"Bug Tracker" = "https://i10git.cs.fau.de/rahil.doshi/materforge/-/issues"
-Documentation = "https://i10git.cs.fau.de/rahil.doshi/materforge/-/wikis/home"
-Changelog = "https://i10git.cs.fau.de/rahil.doshi/materforge/-/blob/master/CHANGELOG.md"
+Homepage = "https://github.com/rahildoshi97/materforge"
+Repository = "https://github.com/rahildoshi97/materforge"
+"Bug Tracker" = "https://github.com/rahildoshi97/materforge/issues"
+Documentation = "https://materforge.readthedocs.io"
+Changelog = "https://github.com/rahildoshi97/materforge/blob/main/CHANGELOG.md"
+"GitLab Mirror" = "https://i10git.cs.fau.de/rahil.doshi/materforge"
 
 [project.scripts]
 materforge-validate = "materforge.parsing.api:validate_yaml_file"
@@ -114,283 +112,8 @@ materforge = [
     "py.typed",
 ]
 
-# Add setuptools_scm configuration for dynamic versioning
 [tool.setuptools_scm]
 write_to = "src/materforge/_version.py"
 version_scheme = "python-simplified-semver"
 local_scheme = "node-and-date"
-fallback_version = "0.5.0"  # Updated to match current version
-
-[tool.pytest.ini_options]
-addopts = [
-    "-v",
-    "--strict-markers",
-    "--strict-config",
-    # "--cov=src/materforge",
-    # "--cov-report=html:tests/htmlcov",
-    # "--cov-report=term-missing",
-    # "--cov-fail-under=85",
-    "--tb=short",
-]
-testpaths = ["tests"]
-pythonpath = ["src"]
-python_files = ["test_*.py", "*_test.py"]
-python_classes = ["Test*"]
-python_functions = ["test_*"]
-markers = [
-    "unit: Unit tests for individual components",
-    "integration: Integration tests for component interactions",
-    "regression: Regression tests for bug fixes",
-    "slow: Slow tests that may take significant time",
-    "performance: Performance benchmark tests",
-    "property_based: Property-based tests using hypothesis",
-]
-filterwarnings = [
-    "ignore::DeprecationWarning",
-    "ignore::PendingDeprecationWarning",
-    "ignore::UserWarning:matplotlib.*",
-]
-# timeout = 300
-
-# COMPLETELY REMOVED ALL COVERAGE SECTIONS
-# [tool.coverage.run]
-# source = ["materforge"]
-# omit = [
-#     "*/tests/*",
-#     "*/test_*",
-#     "*/__pycache__/*",
-#     "*/apps/*",
-#     "*/examples/*",
-#     "*/_version.py",
-#     "*/conftest.py",
-# ]
-# branch = true
-
-# [tool.coverage.report]
-# exclude_lines = [
-#     "pragma: no cover",
-#     "def __repr__",
-#     "def __str__",
-#     "raise AssertionError",
-#     "raise NotImplementedError",
-#     "if __name__ == .__main__.:",
-#     "if TYPE_CHECKING:",
-#     "class .*\\bProtocol\\):",
-#     "@(abc\\.)?abstractmethod",
-#     "pass",
-#     "\\.\\.\\.",
-# ]
-# show_missing = true
-# skip_covered = false
-# precision = 2
-
-# [tool.coverage.html]
-# directory = "tests/htmlcov"
-
-[tool.black]
-line-length = 120
-target-version = ['py310', 'py311', 'py312']
-include = '\.pyi?$'
-extend-exclude = '''
-/(
-  # directories
-  \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | build
-  | dist
-  | apps/cmake-build-.*
-  | apps/walberla
-  | apps/sfg-walberla
-  | _version\.py
-)/
-'''
-
-[tool.isort]
-profile = "black"
-line_length = 120
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
-src_paths = ["src", "tests"]
-skip_glob = ["*/_version.py"]
-known_first_party = ["materforge"]
-known_third_party = [
-    "numpy",
-    "sympy",
-    "scipy",
-    "matplotlib",
-    "pandas",
-    "pytest",
-    "hypothesis",
-    "pwlf",
-    "ruamel",
-    "openpyxl",
-]
-
-[tool.mypy]
-python_version = "3.10"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-warn_unreachable = true
-strict_equality = true
-ignore_missing_imports = true
-show_error_codes = true
-namespace_packages = true
-explicit_package_bases = true
-
-[[tool.mypy.overrides]]
-module = [
-    "pwlf.*",
-    "pystencils.*",
-    "ruamel.*",
-    "matplotlib.*",
-    "scipy.*",
-    "pandas.*",
-    "openpyxl.*",
-    "pytest.*",
-    "hypothesis.*",
-]
-ignore_missing_imports = true
-
-[[tool.mypy.overrides]]
-module = "materforge._version"
-ignore_errors = true
-
-[[tool.mypy.overrides]]
-module = "tests.*"
-disallow_untyped_defs = false
-disallow_incomplete_defs = false
-
-[tool.ruff]
-line-length = 120
-target-version = "py310"
-select = [
-    "E",   # pycodestyle errors
-    "W",   # pycodestyle warnings
-    "F",   # pyflakes
-    "I",   # isort
-    "B",   # flake8-bugbear
-    "C4",  # flake8-comprehensions
-    "UP",  # pyupgrade
-    "N",   # pep8-naming
-    "YTT", # flake8-2020
-    "S",   # bandit
-    "BLE", # flake8-blind-except
-    "FBT", # flake8-boolean-trap
-    "A",   # flake8-builtins
-    "COM", # flake8-commas
-    "C90", # mccabe
-    "DJ",  # flake8-django
-    "EM",  # flake8-errmsg
-    "EXE", # flake8-executable
-    "FA",  # flake8-future-annotations
-    "ISC", # flake8-implicit-str-concat
-    "ICN", # flake8-import-conventions
-    "G",   # flake8-logging-format
-    "INP", # flake8-no-pep420
-    "PIE", # flake8-pie
-    "T20", # flake8-print
-    "PYI", # flake8-pyi
-    "PT",  # flake8-pytest-style
-    "Q",   # flake8-quotes
-    "RSE", # flake8-raise
-    "RET", # flake8-return
-    "SLF", # flake8-self
-    "SLOT", # flake8-slots
-    "SIM", # flake8-simplify
-    "TID", # flake8-tidy-imports
-    "TCH", # flake8-type-checking
-    "INT", # flake8-gettext
-    "ARG", # flake8-unused-arguments
-    "PTH", # flake8-use-pathlib
-    "TD",  # flake8-todos
-    "FIX", # flake8-fixme
-    "ERA", # eradicate
-    "PD",  # pandas-vet
-    "PGH", # pygrep-hooks
-    "PL",  # pylint
-    "TRY", # tryceratops
-    "FLY", # flynt
-    "NPY", # numpy
-    "PERF", # perflint
-    "FURB", # refurb
-    "LOG", # flake8-logging
-    "RUF", # ruff-specific rules
-]
-ignore = [
-    "E203",   # whitespace before ':'
-    "E501",   # line too long, handled by black
-    "B008",   # do not perform function calls in argument defaults
-    "S101",   # use of assert detected
-    "S311",   # standard pseudo-random generators are not suitable for security/cryptographic purposes
-    "PLR0913", # too many arguments to function call
-    "PLR0912", # too many branches
-    "PLR0915", # too many statements
-    "C901",   # function is too complex
-    "FBT001", # boolean positional arg in function definition
-    "FBT002", # boolean default positional argument in function definition
-    "A003",   # builtin-attribute-shadowing
-    "N806",   # variable in function should be lowercase
-    "SIM108", # use ternary operator instead of if-else-block
-    "TRY003", # avoid specifying long messages outside the exception class
-    "EM101",  # exception must not use a string literal, assign to variable first
-    "EM102",  # exception must not use an f-string literal, assign to variable first
-]
-exclude = [
-    ".git",
-    "__pycache__",
-    "build",
-    "dist",
-    ".eggs",
-    "*.egg-info",
-    ".venv",
-    ".tox",
-    "_version.py",
-    "apps/cmake-build-*",
-    "apps/walberla",
-    "apps/sfg-walberla",
-]
-
-[tool.ruff.per-file-ignores]
-"__init__.py" = ["F401", "F403"]  # Allow unused imports in __init__.py
-"tests/*" = [
-    "B011",    # Allow assert False in tests
-    "S101",    # Allow assert in tests
-    "PLR2004", # Allow magic values in tests
-    "ANN",     # Don't require type annotations in tests
-    "D",       # Don't require docstrings in tests
-    "FBT",     # Allow boolean traps in tests
-    "ARG",     # Allow unused arguments in test fixtures
-]
-"conftest.py" = ["F401", "F403"]  # Allow unused imports in conftest.py
-
-[tool.ruff.mccabe]
-max-complexity = 10
-
-[tool.ruff.pylint]
-max-args = 10
-max-branches = 15
-max-returns = 8
-max-statements = 60
-
-[tool.ruff.flake8-pytest-style]
-fixture-parentheses = false
-mark-parentheses = false
-
-[tool.ruff.flake8-quotes]
-inline-quotes = "double"
-multiline-quotes = "double"
+fallback_version = "0.5.0"
