--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,10 +26,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Physics",
-    "Topic :: Scientific/Engineering :: Chemistry",
-    "Topic :: Scientific/Engineering :: Materials Science",
-    "Topic :: Software Development :: Libraries :: Python Modules",
-    "Typing :: Typed",
+    "Topic :: Scientific/Engineering"
 ]
 requires-python = ">=3.10"
 dependencies = [
