--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,8 @@ docs = [
     "sphinx-rtd-theme>=1.2.0",
     "myst-parser>=1.0.0",
     "sphinx-autodoc-typehints>=1.20.0",
-    "sphinx-copybutton>=0.5.5",
+    "sphinx-copybutton>=0.5.2",
+    "linkify-it-py>=0.7.1",
 ]
 performance = [
     "line_profiler>=4.0.0",
@@ -113,4 +114,4 @@ materforge = [
 write_to = "src/materforge/_version.py"
 version_scheme = "python-simplified-semver"
 local_scheme = "node-and-date"
-fallback_version = "0.5.0"
+fallback_version = "0.5.5"
